Alta y modificar bien

--- a/proyecto-war/src/main/webapp/empresaModificar.xhtml
+++ b/proyecto-war/src/main/webapp/empresaModificar.xhtml
@@ -51,6 +51,10 @@
               <h:outputText value="Ciudad:"/>
               <h:inputText id="ciudad" required="true" value="#{empresaModificar.empresa.ciudad}" class="controls"/>
               <h:message id="ciudadMessage" for="ciudad"/>
+              
+              <h:outputText value="Pais:"/>
+              <h:inputText id="pais" required="true" value="#{empresaModificar.empresa.pais}" class="controls"/>
+              <h:message id="paisMessage" for="pais"/>
 
               <h:outputText value="Codigo Postal:"/>
               <h:inputText id="codigoPostal" required="true" value="#{empresaModificar.empresa.codigoPostal}" class="controls"/>
