--- a/proyecto-war/src/main/webapp/individualEliminar.xhtml
+++ b/proyecto-war/src/main/webapp/individualEliminar.xhtml
@@ -15,7 +15,7 @@
               <h:commandButton id="individualEliminarClick" value="BotonEliminarCliente" action="#{individualEliminar.individualEliminar()}" class="buttons"/>
 
 
-              <h:outputText value="ID:"/>
+              <h:outputText value="Identificacion:"/>
               <h:inputText id="id" required="true" value="#{individualEliminar.individual.id}"/>
               <h:message id="idMessage" for="id"/>
               
