--- a/proyecto-war/src/main/webapp/individualEliminar.xhtml
+++ b/proyecto-war/src/main/webapp/individualEliminar.xhtml
@@ -12,7 +12,7 @@
        <h:form id="individualEliminar">
               <h:outputText value="Introduzca los datos"/>
               <h:panelGrid columns="3">
-              <h:commandButton id="individualEliminarClick" value="BotonEliminarCliente" action="#{individualEliminar.individualEliminar()}" class="buttons"/>
+              <h:commandButton id="individualEliminarClick" value="Aceptar" action="#{individualEliminar.individualEliminar()}" class="buttons"/>
 
 
               <h:outputText value="Identificacion:"/>
