--- a/proyecto-war/src/main/webapp/autorizadosModificar.xhtml
+++ b/proyecto-war/src/main/webapp/autorizadosModificar.xhtml
@@ -12,7 +12,7 @@
        <h:form id="AutorizadosModificar">
               <h:outputText value="Introduzca los datos"/>
               <h:panelGrid columns="3">
-              <h:commandButton id="autorizadosModificarClick" value="BotonModificarAniadir" action="#{autorizadosModificar.autorizadosModificar()}" class="buttons"/>
+              
 
               <h:outputText value="ID:"/>
               <h:inputText id="idAutorizada" required="true" value="#{autorizadosModificar.personaAut.id}" class="controls"/>
@@ -30,9 +30,9 @@
               <h:inputText id="direccion" required="true" value="#{autorizadosModificar.personaAut.direccion}" class="controls"/>
               <h:message id="direccionMessage" for="direccion"/>
 
-             <!---- <h:outputText value="Fecha Nacimiento:"/>
+             <h:outputText value="Fecha Nacimiento:"/>
               <h:inputText id="fechaNacimiento" required="false" value="#{autorizadosModificar.personaAut.fechaNacimiento}" class="controls"/>
-              <h:message id="fechaNacimientoMessage" for="fechaNacimiento"/>-->
+              <h:message id="fechaNacimientoMessage" for="fechaNacimiento"/>
 
               <h:outputText value="Estado:"/>
               <h:inputText id="estado" required="false" value="#{autorizadosModificar.personaAut.estado}" class="controls"/>
@@ -42,10 +42,11 @@
               <h:inputText id="fechaInicio" required="false" value="#{autorizadosModificar.personaAut.fechaInicio}" class="controls"/>
               <h:message id="fechaInicioMessage" for="fechaInicio"/>
 
-              <!----<h:outputText value="Fecha Fin:"/>
+              <h:outputText value="Fecha Fin:"/>
               <h:inputText id="fechaFin" required="false" value="#{autorizadosModificar.personaAut.fechaFin}" class="controls"/>
-              <h:message id="fechaFinMessage" for="fechaFin"/>-->
-
+              <h:message id="fechaFinMessage" for="fechaFin"/>
+              
+              <h:commandButton id="autorizadosModificarClick" value="Aceptar" action="#{autorizadosModificar.autorizadosModificar()}" class="buttons"/>
 
           </h:panelGrid>
        </h:form>
