--- a/proyecto-war/src/main/webapp/cuentaPooledCerrar.xhtml
+++ b/proyecto-war/src/main/webapp/cuentaPooledCerrar.xhtml
@@ -12,7 +12,7 @@
        <h:form id="CuentaPooledCerrar">
               <h:outputText value="Introduzca los datos"/>
               <h:panelGrid columns="3">
-              <h:commandButton id="cuentaPooledAbrirClick" value="BotonCuentaPooledCerrar" action="#{cuentaPooledCerrar.cuentaPooledCerrar()}" class="buttons"/>
+             
 
               <h:outputText value="IBAN:"/>
               <h:inputText id="iban" required="true" value="#{cuentaPooledCerrar.iban}" class="controls"/>
@@ -20,6 +20,8 @@
 
               <h:commandButton id="boton" value="Cerrar Cuenta" action="#{cuentaPooledCerrar.cuentaPooledCerrar}"></h:commandButton>
               <h:message id = "usuario" for="boton"></h:message>
+
+              <h:commandButton id="cuentaPooledAbrirClick" value="Aceptar" action="#{cuentaPooledCerrar.cuentaPooledCerrar()}" class="buttons"/>
               
           </h:panelGrid>
        </h:form>
