--- a/proyecto-war/src/main/webapp/cuentaSegregadaCerrar.xhtml
+++ b/proyecto-war/src/main/webapp/cuentaSegregadaCerrar.xhtml
@@ -12,7 +12,7 @@
        <h:form id="CuentaSegregadaCerrar">
               <h:outputText value="Introduzca los datos"/>
               <h:panelGrid columns="3">
-              <h:commandButton id="cuentaSegregadaAbrirClick" value="BotonCuentaSegregada" action="#{cuentaSegregadaCerrar.cuentaSegregadaCerrar()}" class="buttons"/>
+              
 
               <h:outputText value="IBAN:"/>
               <h:inputText id="iban" required="true" value="#{cuentaSegregadaCerrar.iban}" class="controls"/>
@@ -20,6 +20,8 @@
 
               <h:commandButton id="boton" value="Cerrar Cuenta" action="#{cuentaSegregadaCerrar.cuentaSegregadaCerrar}"></h:commandButton>
               <h:message id = "usuario" for="boton"/>
+
+              <h:commandButton id="cuentaSegregadaAbrirClick" value="Aceptar" action="#{cuentaSegregadaCerrar.cuentaSegregadaCerrar()}" class="buttons"/>
               
           </h:panelGrid>
        </h:form>
