--- a/proyecto-war/src/main/webapp/empresaAlta.xhtml
+++ b/proyecto-war/src/main/webapp/empresaAlta.xhtml
@@ -17,7 +17,7 @@
               <h:outputText value="Introduzca los datos"/>
               <h:panelGrid columns="3">
 
-              <h:commandButton id="empresaAltaClick" value="BotonAltaCliente" action="#{empresaAlta.empresaAlta()}" class="buttons"/>
+             
 
               <h:outputText value="Razon social:"/>
               <h:inputText id="razonSocial" required="true" value="#{empresaAlta.empresa.razon_Social}" class="controls"/>
@@ -59,7 +59,9 @@
               <h:outputText value="Codigo Postal:"/>
               <h:inputText id="codigoPostal" required="true" value="#{empresaAlta.empresa.codigoPostal}" class="controls"/>
               <h:message id="codigoPostalMessage" for="codigoPostal"/>
-        
+
+
+              <h:commandButton id="empresaAltaClick" value="Aceptar" action="#{empresaAlta.empresaAlta()}" class="buttons"/>
 
           </h:panelGrid>
        </h:form>
