--- a/proyecto-war/src/main/webapp/cuentaPooledAbrir.xhtml
+++ b/proyecto-war/src/main/webapp/cuentaPooledAbrir.xhtml
@@ -11,8 +11,8 @@
        <h1><h:outputText id="cuentaPooledAbrir" value="Abrir una cuenta pooled"/></h1>
        <h:form id="CuentaPooledAbrir">
               <h:outputText value="Introduzca los datos"/>
-              <h:panelGrid columns="3">
-             
+              <h:panelGrid columns="3"></h:panelGrid>
+              <h:commandButton id="cuentaPooledAbrirClick" value="BotonCuentaPooledAbrir" action="#{cuentaPooledAbrir.cuentaPooledAbrir()}" class="buttons"/>
 
               <h:outputText value="IBAN:"/>
               <h:inputText id="iban" required="true" value="#{cuentaPooledAbrir.pol.iban}" class="controls"/>
@@ -38,9 +38,6 @@
               <h:inputText id="clasificacion" required="false" value="#{cuentaPooledAbrir.pol.clasificacion}" class="controls"/>
               <h:message id="clasificacionMessage" for="clasificacion"/>
 
-              <h:commandButton id="cuentaPooledAbrirClick" value="Aceptar" action="#{cuentaPooledAbrir.cuentaPooledAbrir()}" class="buttons"/>
-
-         </h:panelGrid>  
        </h:form>
 
        <p>Para volver al inicio, pinche <h:link outcome="mainAdmin.xhtml">aquí</h:link></p>
